<resources>
    <string name="app_name">odin</string>
    <string name="slogan">Healthcare for all!</string>
    <string name="appname">odin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Don\'t have an account? &#032;</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="_text">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_sign_up">Sign up</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="app_logo">App Logo</string>
    <string name="need">What do you need?</string>
    <string name="welcome_message">Welcome Message</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="just_bubbles">Just Bubbles</string>
    <string name="username">What should we call you?</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account? &#032;</string>
    <string name="i_agree">I agree to the &#032;</string>
    <string name="age">Age</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="loading">Loading</string>
    <string name="username_error">Name cannot be empty</string>
    <string name="email_error">Enter a valid email address</string>
    <string name="password_error">Password has to be at least 8 characters long</string>
    <string name="confirm_password_error">Passwords do not match</string>
    <string name="empty_password_error">Password cannot be null</string>
    <string name="hello">Hello&#032;</string>
    <string name="name">there</string>
    <string name="text_settings">Settings</string>
    <string name="planet_prompt">Choose a planet</string>
    <string name="text_history">History</string>
    <string name="track">Track previous scans</string>
    <string name="text_compare">Compare Images</string>
    <string-array name="planets_array">
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
    </string-array>
</resources>