<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity"
    android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:background="#FFFFFF"
            android:backgroundTint="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                tools:ignore="UseCompoundDrawables">
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_history"
                    android:textColor="@color/Secondary"
                    android:textSize="30sp" />


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/welcome_message"
                    android:src="@drawable/history_vector" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/track"
                    android:textAlignment="center"
                    android:textColor="@color/Secondary"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </>