<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:contentPaddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/eye" />

                <TextView
                    android:id="@+id/appname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:fontFamily="sans-serif"
                    android:text="@string/appname"
                    android:textAlignment="center"
                    android:textColor="@color/Secondary"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/slogan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="cursive"
                    android:paddingBottom="10dp"
                    android:text="@string/slogan"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentPaddingLeft="20dp"
            app:contentPaddingRight="20dp"
            app:contentPaddingTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif"
                    android:text="Sign in"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:drawableRight="@drawable/email"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:drawableRight="@drawable/lock"
                    android:ems="10"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/more_rounded_button"
                    android:text="Sign in"
                    android:textColor="@color/colorPrimaryLight" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawingCacheQuality="high"
                    android:indeterminateBehavior="repeat"
                    android:indeterminateDrawable="@drawable/loading"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="Forgot Password?"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/signup_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:autoLink="all"
                        android:linksClickable="false"
                        android:selectAllOnFocus="false"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/signup_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:autoLink="all"
                        android:linksClickable="false"
                        android:selectAllOnFocus="false"
                        android:text=" Sign up"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>